--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,5 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  img(src='http://static3.shop033.com/resources/18/160536/picture/16/85402902.jpg')
+  p Some more text here
