--- a/views/index.jade
+++ b/views/index.jade
@@ -3,5 +3,9 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  img(src='http://static3.shop033.com/resources/18/160536/picture/16/85402902.jpg')
-  p Some more text here
+  img.pic(src='http://static3.shop033.com/resources/18/160536/picture/16/85402902.jpg')
+  input.fader(name='button')
+  button.getInfo() Find some public data
+  p.inBlue Cock Nibbler
+  div.container
+    p.inBlue gettin suuu tech
