--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,3 +5,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+  script(src='bower_components/jquery/dist/jquery.js')
+  script(src='js/jquerystuff.js')
