--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,12 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
-  img(src='http://static3.shop033.com/resources/18/160536/picture/16/85402902.jpg')
-  p Some more text here
+  p Welcome. Please enter your two numbers and witness the fabulous multiplication-bot.
+  form(name="input", action="/", method="post")
+    key num1
+      input(type="number", name="num1")
+    br
+    key num2
+      input(type="number", name="num2")
+      input(type="submit", value="Submit")
+    
