--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,11 +12,15 @@ a {
 }
 
 .pic {
-	width: 300px;
+	width: 100%;
+	position: center;
 }
 
 .container {
-	width: 200px;
-	height:200px;
-	background-color: #B4D455;
+	position: center;
+	width: 100%;
+	left-margin: 1px;
+	background-color: F5FFFA;
+	border-radius: 2px;
+	border: 1px solid #A6D5FF;
 }
