--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,11 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(name="viewport", content="width=device-width, initial-scale=1")
+    link(rel='stylesheet', href='stylesheets/style.css')
+    link(rel='stylesheet', href='bower_components/bootstrap/dist/css/bootstrap.css')
   body
     block content
   script(src='bower_components/jquery/dist/jquery.js')
   script(src='js/jquerystuff.js')
+  script(src='bower_components/bootstrap/dist/js/bootstrap.js')
