--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,3 +10,4 @@ html
   script(src='bower_components/jquery/dist/jquery.js')
   script(src='js/jquerystuff.js')
   script(src='bower_components/bootstrap/dist/js/bootstrap.js')
+  script(src='//code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js')
