--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,15 @@
 body {
-  padding: 5px;
+  padding: 0px;
   font: 14px Helvetica, "Lucida Grande", Arial, sans-serif;
   color: #8C8C8C;
 }
 
 a {
   color: #00B7FF;
+}
+
+h1 {
+	font-size: 12;
 }
 
 .pic {
@@ -26,11 +30,13 @@ a {
 }
 
 .container.article {
+	margin-top: 84px;
 	left: 0px;
 	z-index: 10;
 }
 
 .container.comments {
+	margin-top: 84px;
 	left: 20%;
 	width: 80%;
 	height: 600px;
@@ -52,7 +58,18 @@ a {
 	position: center;
 	background-color: #D6D6D6;
 	width: 90%;
-	height: 40px;
 	margin: 20px;
 	text-align: center;
+	border-radius: 4px;
+	padding: 10px;
+}
+
+.submit {
+
+}
+
+.container.header {
+	position: fixed;
+	z-index: 20;
+	margin: 0px;
 }
