--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,27 @@ a {
 }
 
 h1 {
+	padding-left: 1px;
 	font-size: 12;
+	text-align: left;
+}
+
+div.col-xs-2.check {
+	position: relative;
+	left: 5px;
+	top: 28px;
+	vertical-align: center;
+	border: 2px solid #428bca;
+	border-radius: 25%;
+	width: 20px;
+	height: 30px;
+}
+
+.toggle {
+	position: fixed;
+	vertical-align: center;
+	left: 306px;
+	top: 38px;
 }
 
 .pic {
@@ -40,28 +60,29 @@ h1 {
 	left: 20%;
 	width: 80%;
 	height: 600px;
-	
+	background-color: #0F599A; 
 	float: right;
 	position: fixed;
 }
 
-.com_box {
+.com_box.form-control {
 	background-color: #DEDEDE;
 	position: center;
-	width: 60%;
+	width: 94%;
 	border: 1px solid #A6D5FF;
 	float: left;
-	margin: 10px;
+	margin: 3%;
 }
 
 .sample_comment {
 	position: center;
 	background-color: #D6D6D6;
-	width: 90%;
-	margin: 20px;
-	text-align: center;
+	width: 94%;
+	margin: 3%;
+	text-align: left;
 	border-radius: 4px;
-	padding: 10px;
+	padding: 8px;
+	border: 1px solid #357ebd;
 }
 
 .submit {
@@ -72,4 +93,10 @@ h1 {
 	position: fixed;
 	z-index: 20;
 	margin: 0px;
+}
+
+.btn.btn-primary.btn-block.submit {
+	margin-top: 20px;
+	width: 94%;
+	margin: 3%;
 }
