--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,10 @@ h1 {
 	text-align: left;
 }
 
+p {
+	padding: 5px;
+}
+
 div.col-xs-2.check {
 	position: relative;
 	left: 5px;
@@ -79,15 +83,23 @@ div.col-xs-2.check {
     box-shadow: none;
 }
 
-.heatmap1 {
-	background: #ffffff;
-	background: -moz-linear-gradient(top,  #ffffff 0%, #99d7ff 50%, #f7f8f9 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(50%,#99d7ff), color-stop(100%,#f7f8f9));
-	background: -webkit-linear-gradient(top,  #ffffff 0%,#99d7ff 50%,#f7f8f9 100%);
-	background: -o-linear-gradient(top,  #ffffff 0%,#99d7ff 50%,#f7f8f9 100%);
-	background: -ms-linear-gradient(top,  #ffffff 0%,#99d7ff 50%,#f7f8f9 100%);
-	background: linear-gradient(to bottom,  #ffffff 0%,#99d7ff 50%,#f7f8f9 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f7f8f9',GradientType=0 );
+.reset_bg {
+	background-color: #ffffff;
+}
+
+.bg1 {
+	background-color: #5ec4ff;
+	box-shadow: 0px 0px 40px #5ec4ff;
+}
+
+.bg2 {
+	background-color: #5ec4ff;
+	box-shadow: 0px 0px 40px #5ec4ff;
+}
+
+.bg3 {
+	background-color: #CDEDFF;
+	box-shadow: 0px 0px 40px #5ec4ff;
 }
 
 .sample_comment {
